# TDS-Project-1

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  log_conf.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
app/: fn_tools.json  llm_client.py  llm_test.py  logs.py  security.py  task_handler.py  utils.py
