[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.1.3",
    "fastapi[standard]>=0.115.8",
    "openai>=1.60.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pip>=25.0",
    "scipy>=1.15.1",
    "sentence-transformers>=3.4.1",
]
