[project]
name = "project-1"
version = "0.1.0"
description = "TDS Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.1.3",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pip>=25.0",
]
